--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,119 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+.title{
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 40px;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+}
+*{
+    font-family: 'Nunito', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.burger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 18px;
+    cursor: pointer;
+}
+.burger {
+    display: none; /* скрыть кнопку на десктопе */
+    font-size: 24px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+.burger-line {
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    transition: transform 0.3s, opacity 0.3s;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.open .burger-line:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.open .burger-line:nth-child(2) {
+    opacity: 0;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.open .burger-line:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.open .menu {
+    opacity: 1;
+}
+
+*:before,
+*:after {
+    box-sizing: border-box;
+
+}
+.swiper-pagination-bullet-active {
+    background-color: black;
+}
+.swiper-pagination-bullet {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+:focus,
+:active {
+    outline: none;
+}
+
+a:focus,
+a:active {
+    outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+    display: block;
+}
+@media (max-width: 767px) {
+    .burger {
+        display: flex; /* показать кнопку на мобильных устройствах */
+    }
+
+    .menu {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        background-color: #f1f1f1;
+        transition: all 0.3s;
+        max-height: 0;
+        overflow: hidden;
+    }
+
+    .menu.open {
+        max-height: 200px; /* высота меню при открытии */
+    }
+
+    .menu li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
 }
