--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@
 .burger-line {
     width: 25px;
     height: 3px;
-    background-color: black;
+    background-color: #fff;
     transition: transform 0.3s, opacity 0.3s;
 }
 
@@ -51,7 +51,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: #006790;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -93,6 +93,7 @@ aside {
 @media (max-width: 767px) {
     .burger {
         display: flex; /* показать кнопку на мобильных устройствах */
+
     }
 
     .menu {
@@ -102,7 +103,7 @@ aside {
         width: 100%;
         flex-direction: column;
         align-items: center;
-        background-color: #f1f1f1;
+        background-color: #006790;
         transition: all 0.3s;
         max-height: 0;
         overflow: hidden;
