--- a/src/styles/main.module.scss
+++ b/src/styles/main.module.scss
@@ -5,7 +5,7 @@
 
     background-image:url("../assets/secondMain.png") ;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover  ;
   background-position: right center;
   &__left{
     width: 100%;
