--- a/src/styles/disable.module.scss
+++ b/src/styles/disable.module.scss
@@ -3,4 +3,17 @@
   input::-webkit-inner-spin-button {
     -webkit-appearance: none;
   }
+  background-color: rgba(114, 101, 101, 0.49);;
+  input{
+    color: #fff;
+  }
+  label{
+    color: #fff;
+  }
+
+}
+.numberBox{
+  width: 300px;
+  display: flex;
+  flex-direction: column;
 }
