--- a/src/styles/calc.module.scss
+++ b/src/styles/calc.module.scss
@@ -1,6 +1,8 @@
 .calc{
   position: relative;
   margin-bottom: 60px;
+  background: #F3F9FF;
+  padding: 20px;
 
 &__container{
   max-width: 1280px;
