--- a/src/styles/disable.module.scss
+++ b/src/styles/disable.module.scss
@@ -17,3 +17,17 @@
   display: flex;
   flex-direction: column;
 }
+.searchBox{
+  margin-bottom: 25px;
+}
+.box{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-around;
+}
+.underline{
+  height: 1px;
+  width: 100%;
+  border-bottom: 1px solid #000;
+}
